--- a/Lorenz.ipynb
+++ b/Lorenz.ipynb
@@ -179,10 +179,10 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.8"
   },
-  github: {
-    render: {
-      files: ["./lorenz.py],
-      execute: true
+  "github": {
+    "render": {
+      "files": ["./lorenz.py],
+      "execute": true
     }
   }
  },
