--- a/Lorenz.ipynb
+++ b/Lorenz.ipynb
@@ -181,7 +181,7 @@
   },
   "github": {
     "render": {
-      "files": ["./lorenz.py],
+      "files": ["./lorenz.py"],
       "execute": true
     }
   }
